# ZMake

./: .gitignore  CMakeLists.txt  NodeTiler.cmake  README.md  main.cpp
assets/qss/: nodeeditor-dark.qss  nodeeditor.qss
include/: zmake_conf.h  zmake_conf_nodes.h  zmake_definitions.h  zmake_drag_dirsTree.h  zmake_drag_listbox.h  zmake_node_base.h  zmake_nodes.h  zmake_sub_window.h  zmake_tree_model.h  zmake_window.h  znode_file.h  znode_file_graphics.h  znode_rule.h  znode_vars.h
src/: zmake_conf.cpp  zmake_conf_nodes.cpp  zmake_definitions.cpp  zmake_drag_dirsTree.cpp  zmake_drag_listbox.cpp  zmake_node_base.cpp  zmake_nodes.cpp  zmake_sub_window.cpp  zmake_tree_model.cpp  zmake_window.cpp  znode_file.cpp  znode_file_graphics.cpp  znode_rule.cpp  znode_vars.cpp
